comm/iridium/IridiumMessage: Cleanup Java9+ deprecation of newInstance.